# crosswalk_v2

./: .gitattributes  .gitignore  CODE_REVIEW.md  README.md  flake.nix  pub.py  pyproject.toml  sub.py
ansible/: README.md  inventory.ini  site.retry  site.yml
ansible/host_vars/: crosswalk-a.yml  crosswalk-b.yml
ansible/roles/crosswalk/handlers/: main.yml
ansible/roles/crosswalk/tasks/: ap.yml  code.yml  control.yml  initial.yml  main.yml  sound.yml  time_sync.yml  wifi.yml  wifi_country.yml
ansible/roles/crosswalk/templates/: xwalk_api.service  xwalk_audio_player.service  xwalk_button_light.service  xwalk_button_switch.service  xwalk_controller.service  xwalk_matrix_driver.service  xwalk_sys_control.service  xwalk_timer.service
ansible/roles/crosswalk/vars/: main.yml
src/: button_switch.py  controller.py  matrix_driver.py  models.py  router.py  timer.py  util.py
static/data/: config.yaml
templates/: base.html  index.html
templates/components/: status.html
test/: test_button_light.py  test_button_switch.py  test_fsm.py
test/data/: config.yaml  test_anim.py
test/data/img/intros/: wait6.stream  wait8.stream
test/data/img/outros/: countdown3.stream  countdown4.stream  countdown5.stream
test/data/img/walks/: walk-backwards.stream
test/data/snd/: walkBackwards.m4a
xwalk2/: animation.py  animation_library.py  api.py  audio_player.py  button_light.py  button_light_virtual.py  button_lights.py  button_switch.py  button_switch_virtual.py  controller.py  fsm.py  matrix_driver.py  matrix_driver_virtual.py  models.py  sys_control.py  timer.py  util.py
